# Nexus.Gate.Fund

./: README.md  app.py  credentials.json  daily_portfolio_logger.py  index.html  main.py  nexus-gate-fund-459822-2c37c22b82d7.json  pyproject.toml  replit.md  trading_bot.py  utilt.py
templates/: index.html
