[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "oauth2client>=4.1.3",
    "openai>=1.78.1",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]
